# quark-shift-api

./: Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  handlers.rs  main.rs  models.rs  response.rs  routes.rs
